.k8s/playground.yaml
# ----------------------------------------------------------------------------------------------------------------------
# Playground
# ----------------------------------------------------------------------------------------------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: playground
  annotations:
    istio-injection: enabled
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  namespace: playground
  annotations:
    com.github.yingzhuo/created-by: yingzhuo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  paused: false
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: playground
    spec:
      serviceAccountName: default
      volumes:
        - name: log
          emptyDir: { }
      restartPolicy: Always
      containers:
        - name: core
          image: "yingzhuo/playground"
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 8
            timeoutSeconds: 5
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              path: "/actuator/health"
              port: 8080
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: log
              mountPath: "/var/log/"
              readOnly: false
        - name: filebeat
          image: "registry.cn-shanghai.aliyuncs.com/yingzhuo/filebeat:5.6.16"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: log
              mountPath: "/var/log/"
---

apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: playground
  annotations:
    com.github.yingzhuo/created-by: "应卓"
    # prometheus.io/scrape: "true"
    # prometheus.io/path: "/actuator/prometheus"
    # prometheus.io/port: "8080"
spec:
  selector:
    app: playground
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: playground
  namespace: playground
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: playground.k8s.io
      http:
        paths:
          - backend:
              serviceName: playground
              servicePort: 8080
---
